--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@sentry/nextjs": "^8.47.0",
     "@vimeo/player": "^2.25.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
