--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@heroicons/react": "^2.2.0",
     "@sentry/nextjs": "^8.47.0",
     "@vimeo/player": "^2.25.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "cors": "^2.8.5",
+    "framer-motion": "^11.15.0",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "tailwindcss-textshadow": "^2.1.3",
     "vimeo": "^2.3.1"
   },
   "devDependencies": {
